[gd_scene load_steps=5 format=3 uid="uid://d2qa4m3blgw5m"]

[ext_resource type="Script" uid="uid://cxlg206amdtrg" path="res://scripts/gameplay/camera.gd" id="1_s88o6"]
[ext_resource type="Texture2D" uid="uid://dwx3lwth150pw" path="res://assets/images/camera_overlay.png" id="3_2l8hh"]
[ext_resource type="Texture2D" uid="uid://closdhmh7qoek" path="res://assets/images/camera_shutter_overlay.png" id="4_4ic5v"]
[ext_resource type="Script" uid="uid://bvrocktppbd7h" path="res://scripts/scenes/gallery_menu.gd" id="5_5a6y4"]

[node name="Camera" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_s88o6")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
limit_left = -371
limit_top = -94
limit_right = 1514
limit_bottom = 825
editor_draw_limits = true

[node name="CameraLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="CameraOverlay" type="TextureRect" parent="CameraLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("3_2l8hh")
expand_mode = 1

[node name="CameraShutter" type="TextureRect" parent="CameraLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("4_4ic5v")
expand_mode = 1

[node name="GalleryMenu" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("5_5a6y4")

[node name="ColorRect" type="ColorRect" parent="GalleryMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -300.0
offset_right = 576.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ImageContainer" type="GridContainer" parent="GalleryMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -270.0
offset_right = 400.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 4
